fix: Spacing and mobile view

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	min-height: 100vh;
+	display: grid;
+	place-content: center;
 	background-color: lightgray;
 	font-family: sans-serif;
 }
@@ -11,13 +11,13 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	width: 22rem;
-	height: auto;
+	width: 22.5rem;
 	text-align: center;
 	padding: 3rem;
 	gap: 1.56rem;
 	background-color: white;
 }
+
 .rate svg {
 	height: 1.37rem;
 }
@@ -64,23 +64,17 @@ body {
 	color: cornflowerblue;
 	font-weight: bold;
 	font-size: 0.87rem;
-	margin-top: 0;
-	margin-bottom: 0;
 }
 
 h1 {
-	text-align: center;
+	padding: 3rem;
 	font-size: 2.5rem;
 	line-height: 3.125rem;
 	font-weight: bolder;
 }
 
-.form {
-	display: grid;
-	gap: 1.56rem;
-}
-
 .container form {
+	width: 22.5rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -118,10 +112,9 @@ h1 {
 .footer {
 	color: grey;
 	font-size: 0.87rem;
-	margin: 0;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 800px) {
 	.container {
 		flex-direction: row;
 		justify-content: space-between;
@@ -137,6 +130,10 @@ h1 {
 		padding: 1.87rem;
 	}
 
+	.review {
+		width: 27.375rem;
+	}
+
 	.review .reviewDesc {
 		width: 16.0625rem;
 	}
@@ -150,18 +147,18 @@ h1 {
 		height: 18.625rem;
 	}
 
-	.form {
-		width: 30.875rem;
-	}
-
 	.container form {
+		width: 30.875rem;
+		gap: 0;
 		flex-direction: row;
+		margin: 0;
+		justify-content: none;
+		align-items: none;
 	}
 	.container form input {
 		width: 16rem;
 		border-radius: 0.3125rem 0 0 0.3125rem;
 		margin: 0;
-		align-items: center;
 	}
 
 	.container form button {
